--- a/install
+++ b/install
@@ -16,19 +16,19 @@ for arg in "$@"; do
 done
 
 isAlreadyInstalled=false
-kpackagetool5 --type="Plasma/Applet" --show="$packageNamespace" &> /dev/null
+kpackagetool6 --type="Plasma/Applet" --show="$packageNamespace" &> /dev/null
 if [ $? == 0 ]; then
 	isAlreadyInstalled=true
 fi
 
 if $isAlreadyInstalled; then
-	kpackagetool5 -t Plasma/Applet -u package
+	kpackagetool6 -t Plasma/Applet -u package
 	restartPlasmashell=true
 else
-	kpackagetool5 -t Plasma/Applet -i package
+	kpackagetool6 -t Plasma/Applet -i package
 fi
 
 if $restartPlasmashell; then
 	killall plasmashell
-	kstart5 plasmashell
+	kstart plasmashell
 fi
